export const snapshot = {};

snapshot[`parse list 1`] = `
[
  {
    attrs: {},
    childNodes: [
      {
        attrs: {},
        childNodes: [
          {
            content: "item 1",
            nodeType: "text",
          },
        ],
        nodeType: "tag",
        tagName: "li",
      },
      {
        attrs: {},
        childNodes: [
          {
            content: "item 1",
            nodeType: "text",
          },
        ],
        nodeType: "tag",
        tagName: "li",
      },
    ],
    nodeType: "tag",
    tagName: "ul",
  },
]
`;

snapshot[`parse some content 1`] = `
[
  {
    attrs: {},
    childNodes: [
      {
        content: "no wrapped",
        nodeType: "text",
      },
      {
        attrs: {},
        childNodes: [
          {
            content: "item 1",
            nodeType: "text",
          },
        ],
        nodeType: "tag",
        tagName: "p",
      },
      {
        attrs: {
          alt: "",
          src: "/static/sample.png",
        },
        childNodes: [
        ],
        nodeType: "tag",
        tagName: "img",
      },
    ],
    nodeType: "tag",
    tagName: "div",
  },
]
`;

snapshot[`parse some content 2`] = `
[
  {
    attrs: {},
    childNodes: [
      {
        content: "text",
        nodeType: "text",
      },
    ],
    nodeType: "tag",
    tagName: "custom-p",
  },
]
`;
